name:                named-aeson
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Aeson.Named
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, aeson >=0.7 && <0.8, template-haskell >=2.9 && <2.10, text >=1.1 && <1.2
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable banana
  main-is:             Banana.hs
  hs-source-dirs:      examples
  build-depends:       base >=4.7 && <4.8, named-aeson, aeson, text
  ghc-options:         -ddump-splices
  default-language:    Haskell2010
